# mempalace

./: .gitignore  agent.py  agent_v2.py  pyproject.toml
agent/: .gitignore  README.md  agent.py  learn-about-humans.html  pyproject.toml  run-llm.sh.example  run-local.sh.example  server.py
tests/: conftest.py  test_mcp_server.py  test_searcher.py
